Tagging version 0.2.9 - fixes getimagesize() issues, SSL mixed content issues, IE image display issues, and widget overlapping issues
git-svn-id: https://plugins.svn.wordpress.org/dk-new-medias-image-rotator-widget/trunk@849302 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/dk-image-rotator-widget.css
+++ b/css/dk-image-rotator-widget.css
@@ -8,11 +8,18 @@
 	background: url('../images/loading.gif') center center no-repeat;
 }
 
+.irw-slider {
+	list-style-type: none;
+}
+
 .irw-slider li {
+	list-style-type: none;
 	display: inline-block;
 }
 
 .irw-widget li img {
+	width: auto;
+	height: auto;
 	max-width: 100% !important;
 }
 
